--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="searchBar"> 
+            <input type="text" id="word" class="input" placeholder="Enter the word">
+            <button class="button">SEARCH</button>
+        </div>
+        <div class="meaning">
+            <h3 class="answer"></h3>
+        </div>
+        <div class="meaning">
+            <h3 class="synonymList"></h3>
+        </div>
+    </div>
     
 </body>
+    <script src="script.js"></script>
 </html>
