--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+    <audio id="sound"></audio>
     <div class="container">
-        <div class="searchBar"> 
-            <input type="text" id="word" class="input" placeholder="Enter the word">
-            <button class="button">SEARCH</button>
+        <div class="search-box">
+            <input type="text" placeholder="Enter the word" class="word"/>
+            <button class="searchButton">SEARCH</button>
         </div>
-        <div class="meaning">
-            <h3 class="answer"></h3>
-        </div>
-        <div class="meaning">
-            <h3 class="synonymList"></h3>
+        <div class="result" id="result">
+            <div class="content">
+                <h3 id="wordHeading"></h3>
+            </div>
+            <div class="details">
+                <p id="partofSpeech"></p>
+                <p id="phonetics"></p>
+            </div>
+            <p class="wordMeaning" id="wordMeaning">
+            </p>
+            <p class="wordExample" id="wordExample">
+            </p>
         </div>
     </div>
     
